--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.138 2003-11-03 19:26:29 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.139 2003-11-04 17:09:06 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -57,15 +57,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.1.0, 28 October 2003}
+\date{Version 1.1.0, 4 November 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.2.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.0.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.2.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.0.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -224,10 +224,10 @@ determine the way primitives are handled:
   the output, thus substantially reducing the size of the output file.
 \item[\dd{GL2PS_USE_CURRENT_VIEWPORT}] The current OpenGL viewport is used
   instead of \dd{viewport}.
-\item[\dd{GL2PS_COMPRESS}] The output stream is compressed. You need to
-  compile GL2PS with \dd{HAVE_ZLIB}, \dd{HAVE_LIBZ} or \dd{GL2PS_HAVE_ZLIB}
-  defined and link the executable with the zlib library
-  (\url{http://www.gzip.org/zlib/}) for this option to take effect.
+\item[\dd{GL2PS_COMPRESS}] The output stream is compressed. For this option
+  to take effect you need to compile GL2PS with \dd{HAVE_ZLIB},
+  \dd{HAVE_LIBZ} or \dd{GL2PS_HAVE_ZLIB} defined, and link the executable
+  with the zlib library (\url{http://www.gzip.org/zlib/}).
 \end{description}
 
 \item[\dd{colormode}] Specifies the color mode: \dd{GL_RGBA} or
@@ -698,7 +698,7 @@ product does not seem to be available anymore).
 \item[0.9.2] (Jul 4, 2003) Improved occlusion culling; new
   \dd{GL2PS_USE_CURRENT_VIEWPORT} option.
 \item[1.0.0] (Sep 24, 2003) Native PDF support contributed by Micha Bieber.
-\item[1.1.0] (Oct 28, 2003) new \dd{GL2PS_COMPRESS} option to output
+\item[1.1.0] (Nov 4, 2003) New \dd{GL2PS_COMPRESS} option to create
   compressed PostScript and PDF files; new alternative license (see
   \dd{COPYING.GL2PS}).
 \end{description}
